runtime-sip4j-application/pulse-new/antlr-generated/uma/SMC/PluralParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g 2018-07-11 19:07:16

package uma.SMC;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class PluralParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AT_FULL", "AT_PURE", "AT_IMMUTABLE", "AT_SHARE", "AT_UNIQUE", "PUBLIC_BEHAVIOR", "FULL", "PURE", "IMMUTABLE", "SHARE", "UNIQUE", "NONE", "LSBRACKET", "RSBRACKET", "PERM", "EQUAL", "EQUALOPERATOR", "IN", "THIS", "RESULT", "PARAM", "REQUIRES", "ENSURES", "QUOTE", "AND", "USE", "USEFIELDS", "PUNCTUATION", "CASES", "LCBRACKET", "RCBRACKET", "CLASS_STATES", "REFINE", "VALUE", "STATE", "STATES", "DIM", "NAME", "INV", "OPERATOR", "SEMICOLON", "LESS", "LESSTHANEQUAL", "GREATER", "GREATERTHANEQUAL", "ANDD", "OR", "JMLSTART", "JMLEND", "PLUSMINUSOPERATOR", "ASSIGNABLE", "NOTHING", "EVERYTHING", "GHOST", "INT", "INVARIANT", "OLD", "ID", "NUMBERS", "WS"
    };
    public static final int PUNCTUATION=31;
    public static final int CASES=32;
    public static final int EVERYTHING=56;
    public static final int EQUALOPERATOR=20;
    public static final int PARAM=24;
    public static final int IMMUTABLE=12;
    public static final int JMLEND=52;
    public static final int PUBLIC_BEHAVIOR=9;
    public static final int ID=61;
    public static final int AND=28;
    public static final int EOF=-1;
    public static final int USEFIELDS=30;
    public static final int STATES=39;
    public static final int ENSURES=26;
    public static final int QUOTE=27;
    public static final int PURE=11;
    public static final int AT_UNIQUE=8;
    public static final int NAME=41;
    public static final int GREATER=47;
    public static final int FULL=10;
    public static final int IN=21;
    public static final int RSBRACKET=17;
    public static final int EQUAL=19;
    public static final int LCBRACKET=33;
    public static final int LESS=45;
    public static final int THIS=22;
    public static final int REFINE=36;
    public static final int NOTHING=55;
    public static final int SHARE=13;
    public static final int LESSTHANEQUAL=46;
    public static final int AT_IMMUTABLE=6;
    public static final int RCBRACKET=34;
    public static final int CLASS_STATES=35;
    public static final int AT_PURE=5;
    public static final int NUMBERS=62;
    public static final int ASSIGNABLE=54;
    public static final int AT_FULL=4;
    public static final int UNIQUE=14;
    public static final int STATE=38;
    public static final int GHOST=57;
    public static final int OPERATOR=43;
    public static final int INV=42;
    public static final int INVARIANT=59;
    public static final int OLD=60;
    public static final int RESULT=23;
    public static final int INT=58;
    public static final int SEMICOLON=44;
    public static final int JMLSTART=51;
    public static final int VALUE=37;
    public static final int PLUSMINUSOPERATOR=53;
    public static final int LSBRACKET=16;
    public static final int WS=63;
    public static final int REQUIRES=25;
    public static final int NONE=15;
    public static final int OR=50;
    public static final int DIM=40;
    public static final int AT_SHARE=7;
    public static final int USE=29;
    public static final int ANDD=49;
    public static final int GREATERTHANEQUAL=48;
    public static final int PERM=18;

    // delegates
    // delegators


        public PluralParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public PluralParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    public String[] getTokenNames() { return PluralParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g"; }



    // $ANTLR start "jmlSpecifications"
    // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:88:1: jmlSpecifications : ( jmlClassSpecifications | jmlMethodSpecification );
    public final void jmlSpecifications() throws RecognitionException {
        try {
            // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:88:18: ( jmlClassSpecifications | jmlMethodSpecification )
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==GHOST||LA1_0==INVARIANT) ) {
                alt1=1;
            }
            else if ( (LA1_0==JMLSTART) ) {
                alt1=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;
            }
            switch (alt1) {
                case 1 :
                    // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:88:20: jmlClassSpecifications
                    {
                    pushFollow(FOLLOW_jmlClassSpecifications_in_jmlSpecifications1071);
                    jmlClassSpecifications();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:88:43: jmlMethodSpecification
                    {
                    pushFollow(FOLLOW_jmlMethodSpecification_in_jmlSpecifications1073);
                    jmlMethodSpecification();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "jmlSpecifications"


    // $ANTLR start "jmlClassSpecifications"
    // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:91:1: jmlClassSpecifications : ( jmlGhostDeclaration | jmlGhostInv );
    public final void jmlClassSpecifications() throws RecognitionException {
        try {
            // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:91:23: ( jmlGhostDeclaration | jmlGhostInv )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==GHOST) ) {
                alt2=1;
            }
            else if ( (LA2_0==INVARIANT) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:91:25: jmlGhostDeclaration
                    {
                    pushFollow(FOLLOW_jmlGhostDeclaration_in_jmlClassSpecifications1081);
                    jmlGhostDeclaration();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:91:45: jmlGhostInv
                    {
                    pushFollow(FOLLOW_jmlGhostInv_in_jmlClassSpecifications1083);
                    jmlGhostInv();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "jmlClassSpecifications"


    // $ANTLR start "jmlGhostDeclaration"
    // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:93:1: jmlGhostDeclaration : GHOST INT dim= ID SEMICOLON ;
    public final void jmlGhostDeclaration() throws RecognitionException {
        Token dim=null;

        try {
            // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:93:20: ( GHOST INT dim= ID SEMICOLON )
            // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:93:22: GHOST INT dim= ID SEMICOLON
            {
            match(input,GHOST,FOLLOW_GHOST_in_jmlGhostDeclaration1090); 
            match(input,INT,FOLLOW_INT_in_jmlGhostDeclaration1092); 
            dim=(Token)match(input,ID,FOLLOW_ID_in_jmlGhostDeclaration1096); 
            match(input,SEMICOLON,FOLLOW_SEMICOLON_in_jmlGhostDeclaration1098); 

                EJmlSpecification.setDimensionName((dim!=null?dim.getText():null));


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "jmlGhostDeclaration"


    // $ANTLR start "jmlGhostInv"
    // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:97:1: jmlGhostInv : INVARIANT low= NUMBERS LESSTHANEQUAL ID ANDD ID LESSTHANEQUAL high= NUMBERS SEMICOLON ;
    public final void jmlGhostInv() throws RecognitionException {
        Token low=null;
        Token high=null;

        try {
            // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:97:12: ( INVARIANT low= NUMBERS LESSTHANEQUAL ID ANDD ID LESSTHANEQUAL high= NUMBERS SEMICOLON )
            // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:97:14: INVARIANT low= NUMBERS LESSTHANEQUAL ID ANDD ID LESSTHANEQUAL high= NUMBERS SEMICOLON
            {
            match(input,INVARIANT,FOLLOW_INVARIANT_in_jmlGhostInv1106); 
            low=(Token)match(input,NUMBERS,FOLLOW_NUMBERS_in_jmlGhostInv1111); 
            match(input,LESSTHANEQUAL,FOLLOW_LESSTHANEQUAL_in_jmlGhostInv1113); 
            match(input,ID,FOLLOW_ID_in_jmlGhostInv1115); 
            match(input,ANDD,FOLLOW_ANDD_in_jmlGhostInv1117); 
            match(input,ID,FOLLOW_ID_in_jmlGhostInv1119); 
            match(input,LESSTHANEQUAL,FOLLOW_LESSTHANEQUAL_in_jmlGhostInv1121); 
            high=(Token)match(input,NUMBERS,FOLLOW_NUMBERS_in_jmlGhostInv1125); 
            match(input,SEMICOLON,FOLLOW_SEMICOLON_in_jmlGhostInv1127); 

                int nlow=Integer.parseInt((low!=null?low.getText():null));
                int nhigh=Integer.parseInt((high!=null?high.getText():null));
              EJmlSpecification.setDimensionValues(nlow, nhigh);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "jmlGhostInv"


    // $ANTLR start "jmlMethodSpecification"
    // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:104:1: jmlMethodSpecification : JMLSTART PUBLIC_BEHAVIOR ( REQUIRES jmlRequires SEMICOLON )? ( jmlAssign )? ( jmlEnsures )? JMLEND ;
    public final void jmlMethodSpecification() throws RecognitionException {
        try {
            // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:104:23: ( JMLSTART PUBLIC_BEHAVIOR ( REQUIRES jmlRequires SEMICOLON )? ( jmlAssign )? ( jmlEnsures )? JMLEND )
            // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:104:25: JMLSTART PUBLIC_BEHAVIOR ( REQUIRES jmlRequires SEMICOLON )? ( jmlAssign )? ( jmlEnsures )? JMLEND
            {
            match(input,JMLSTART,FOLLOW_JMLSTART_in_jmlMethodSpecification1136); 
            match(input,PUBLIC_BEHAVIOR,FOLLOW_PUBLIC_BEHAVIOR_in_jmlMethodSpecification1138); 
            // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:104:51: ( REQUIRES jmlRequires SEMICOLON )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==REQUIRES) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:104:52: REQUIRES jmlRequires SEMICOLON
                    {
                    match(input,REQUIRES,FOLLOW_REQUIRES_in_jmlMethodSpecification1142); 
                    pushFollow(FOLLOW_jmlRequires_in_jmlMethodSpecification1144);
                    jmlRequires();

                    state._fsp--;

                    match(input,SEMICOLON,FOLLOW_SEMICOLON_in_jmlMethodSpecification1147); 

                    }
                    break;

            }

            // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:104:86: ( jmlAssign )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==ASSIGNABLE) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:104:87: jmlAssign
                    {
                    pushFollow(FOLLOW_jmlAssign_in_jmlMethodSpecification1152);
                    jmlAssign();

                    state._fsp--;


                    }
                    break;

            }

            // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:104:99: ( jmlEnsures )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==ENSURES) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:104:100: jmlEnsures
                    {
                    pushFollow(FOLLOW_jmlEnsures_in_jmlMethodSpecification1157);
                    jmlEnsures();

                    state._fsp--;


                    }
                    break;

            }

            match(input,JMLEND,FOLLOW_JMLEND_in_jmlMethodSpecification1161); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "jmlMethodSpecification"


    // $ANTLR start "jmlRequires"
    // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:106:1: jmlRequires : ( jmlReq | jmlOrReq | jmlLessThanEqualReq );
    public final void jmlRequires() throws RecognitionException {
        try {
            // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:106:12: ( jmlReq | jmlOrReq | jmlLessThanEqualReq )
            int alt6=3;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==ID) ) {
                int LA6_1 = input.LA(2);

                if ( (LA6_1==EQUALOPERATOR) ) {
                    int LA6_2 = input.LA(3);

                    if ( (LA6_2==NUMBERS) ) {
                        int LA6_4 = input.LA(4);

                        if ( (LA6_4==OR) ) {
                            alt6=2;
                        }
                        else if ( (LA6_4==SEMICOLON) ) {
                            alt6=1;
                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("", 6, 4, input);

                            throw nvae;
                        }
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 6, 2, input);

                        throw nvae;
                    }
                }
                else if ( (LA6_1==LESSTHANEQUAL) ) {
                    alt6=3;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:106:13: jmlReq
                    {
                    pushFollow(FOLLOW_jmlReq_in_jmlRequires1167);
                    jmlReq();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:106:20: jmlOrReq
                    {
                    pushFollow(FOLLOW_jmlOrReq_in_jmlRequires1169);
                    jmlOrReq();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:106:29: jmlLessThanEqualReq
                    {
                    pushFollow(FOLLOW_jmlLessThanEqualReq_in_jmlRequires1171);
                    jmlLessThanEqualReq();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "jmlRequires"


    // $ANTLR start "jmlOrReq"
    // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:108:1: jmlOrReq : jmlReq ( OR jmlReq )+ ;
    public final void jmlOrReq() throws RecognitionException {
        try {
            // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:108:9: ( jmlReq ( OR jmlReq )+ )
            // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:108:11: jmlReq ( OR jmlReq )+
            {
            pushFollow(FOLLOW_jmlReq_in_jmlOrReq1178);
            jmlReq();

            state._fsp--;

            // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:108:18: ( OR jmlReq )+
            int cnt7=0;
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==OR) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:108:19: OR jmlReq
            	    {
            	    match(input,OR,FOLLOW_OR_in_jmlOrReq1181); 
            	    pushFollow(FOLLOW_jmlReq_in_jmlOrReq1183);
            	    jmlReq();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt7 >= 1 ) break loop7;
                        EarlyExitException eee =
                            new EarlyExitException(7, input);
                        throw eee;
                }
                cnt7++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "jmlOrReq"


    // $ANTLR start "jmlLessThanEqualReq"
    // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:110:1: jmlLessThanEqualReq : ID LESSTHANEQUAL tstate= NUMBERS ;
    public final void jmlLessThanEqualReq() throws RecognitionException {
        Token tstate=null;

        try {
            // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:110:20: ( ID LESSTHANEQUAL tstate= NUMBERS )
            // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:110:22: ID LESSTHANEQUAL tstate= NUMBERS
            {
            match(input,ID,FOLLOW_ID_in_jmlLessThanEqualReq1192); 
            match(input,LESSTHANEQUAL,FOLLOW_LESSTHANEQUAL_in_jmlLessThanEqualReq1194); 
            tstate=(Token)match(input,NUMBERS,FOLLOW_NUMBERS_in_jmlLessThanEqualReq1198); 

            	      int n=Integer.parseInt((tstate!=null?tstate.getText():null));
            	      int x=1;
            	      while(x<=n){
            	       EJmlSpecification.addRequires(""+x);
            	       x++;
            	    }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "jmlLessThanEqualReq"


    // $ANTLR start "jmlReq"
    // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:119:1: jmlReq : ID EQUALOPERATOR strState= NUMBERS ;
    public final void jmlReq() throws RecognitionException {
        Token strState=null;

        try {
            // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:119:7: ( ID EQUALOPERATOR strState= NUMBERS )
            // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:119:9: ID EQUALOPERATOR strState= NUMBERS
            {
            match(input,ID,FOLLOW_ID_in_jmlReq1207); 
            match(input,EQUALOPERATOR,FOLLOW_EQUALOPERATOR_in_jmlReq1209); 
            strState=(Token)match(input,NUMBERS,FOLLOW_NUMBERS_in_jmlReq1213); 

            EJmlSpecification.addRequires((strState!=null?strState.getText():null));



            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "jmlReq"


    // $ANTLR start "jmlEnsures"
    // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:124:1: jmlEnsures : ( jmlEns | jmlOldEns );
    public final void jmlEnsures() throws RecognitionException {
        try {
            // /Users/ayeshasadiq/Documents/workspace/permission-specs/pt/uma/Plural/grammar/Plural.g:124:11: ( jmlEns | jmlOldEns )
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==ENSURES) ) {
                int LA8_1 = input.LA(2);

                if ( (LA8_1==ID) ) {
                    int LA8_2 = input.LA(3);

                    if ( (LA8_2==EQUALOPERATOR) ) {
                        int LA8_3 = input.LA(4);

                        if ( (LA8_3==NUMBERS) ) {
                            alt8=1;
                        }
                        else if ( (LA8_3==OLD) ) {
                            alt8=2;
                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("", 8, 3, input);

                            throw nvae;
                        }
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 8, 2, input);

                        throw nvae;
                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 8, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);
